--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-firebase/app": "^23.5.0",
     "@react-native-firebase/auth": "^23.5.0",
-    "@react-native-firebase/crashlytics": "^23.4.0",
+    "@react-native-firebase/crashlytics": "^23.5.0",
     "@react-native-firebase/firestore": "^23.5.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
@@ -25,6 +25,7 @@
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.9",
+    "expo-keep-awake": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.11",
     "expo-splash-screen": "~31.0.10",
